Cary | Editing AccessService

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/assets/css/footer.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/assets/css/calendar.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/assets/navigation/navigation.css}" />
+	<link rel="icon" th:href="@{/assets/images/favicon.png}" />
 </head>
 <body>
 	<div id="header">
