--- a/src/main/resources/templates/addEmployee.html
+++ b/src/main/resources/templates/addEmployee.html
@@ -6,8 +6,11 @@
 <head>
     <title>Title</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/assets/css/header.css}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/global.css}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/navigation/navigation.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/assets/css/global.css}" />
+    	<link rel="stylesheet" type="text/css" th:href="@{/assets/css/footer.css}" />
+    	<link rel="stylesheet" type="text/css" th:href="@{/assets/navigation/navigation.css}" />
+    	<link rel="stylesheet" type="text/css" th:href="@{/assets/reqMenu/reqCss.css}" />
+    	<link rel="icon" th:href="@{/assets/images/favicon.png}" />
 </head>
 <body>
 	<div id="header">
@@ -15,6 +18,7 @@
 	</div>
 
 	<div th:include="fragments/navigation :: navigationLoggedIn"></div>
+	<div th:include="fragments/reqMenu :: reqMenu"></div>
 	
 	<form id="addEmployee" method="post" th:action="@{/newEmployee}">
 		<table>
