--- a/src/main/resources/templates/fragments/reqMenu.html
+++ b/src/main/resources/templates/fragments/reqMenu.html
@@ -12,7 +12,9 @@
 		<div id="reqMenu">
 			<ul>
 				<li><a th:href="@{/requests}">Home</a></li>
-				<li><a th:href="@{/newRequest}">new request</a></li>
+				<li><a th:href="@{/newRequest}">New Request</a></li>
+				<li><a th:href="@{/addEmployee}">New Employee</a></li>
+				<li><a th:href="@{/requestedDays}">My Requests</a></li>
 			</ul>
 		</div>
 	</div>
