--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/footer.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/global.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/assets/navigation/navigation.css}" />
+    <link rel="icon" th:href="@{/assets/images/favicon.png}" />
 </head>
 <body>
 	<div id="header">
