--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/global.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/messages.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/assets/navigation/navigation.css}" />
+    <link rel="icon" th:href="@{/assets/images/favicon.png}" />
 </head>
 <body>
 	<div id="header">
